--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   peroku-traefik:
     image: traefik # The official Traefik docker image
+    restart: always
     command: --api --docker # Enables the web UI and tells Traefik to listen to docker
     ports:
       - "80:80"     # The HTTP port
@@ -12,6 +13,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock # So that Traefik can listen to the Docker events
   peroku:
     image: peroku # the peroku image
+    restart: always
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock # So that peroku can listen to the Docker events
     labels:
