fixed the bad gateway issue
also fixed the example

--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -1,12 +1,12 @@
 FROM ubuntu:18.04
 
-RUN apt-get update && apt-get install -y sbcl curl
+RUN apt-get update && apt-get install -y sbcl curl libssl-dev
 
 RUN curl -O https://beta.quicklisp.org/quicklisp.lisp && \
     sbcl --load quicklisp.lisp --eval '(quicklisp-quickstart:install)'\
     --eval '(ql-util:without-prompting (ql:add-to-init-file))' --quit
 
-RUN sbcl --eval '(ql:quickload :clakck)' --quit
+RUN sbcl --eval '(ql:quickload :clack)' --quit
 
 COPY . /root/quicklisp/local-projects/peroku-example
 
