undid dockerfile split

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - ./traefik.toml:/traefik.toml
       #- ./acme.json:/acme.json
   peroku:
-    image: petelliott/peroku-api # the peroku image
+    image: petelliott/peroku # the peroku image
     restart: always
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock # So that peroku can listen to the Docker events
