added ondemand ssl generation

--- a/traefik.toml
+++ b/traefik.toml
@@ -25,5 +25,6 @@ exposedByDefault = false
 #storage = "acme.json"
 #entryPoint = "https"
 #onHostRule = true
+#onDemand = true
 #[acme.httpChallenge]
 #entryPoint = "http"
