--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       #- ./acme.json:/acme.json
   peroku:
     image: petelliott/peroku # the peroku image
+    environment:
+      - PEROKU_TOK
     restart: always
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock # So that peroku can listen to the Docker events
